@@ -45,6 +45,9 @@ https://github.com/networkupstools/nut/milestone/11
      driver programs for issue #2259 in NUT v2.8.2 release misfired with
      regard to data-dump mode (it no longer caused foreground by default).
      [#2408]
+   * The `nut-driver-enumerator.sh` improvements misfired in v2.8.2 release
+     with an overlooked bit of shell syntax, and caused `nut-driver@upsname`
+     instances to not auto-restart when `ups.conf` is edited. [#682, #2410]
 
  - drivers, upsd, upsmon: reduce "scary noise" about failure to `fopen()`
    the PID file (which most of the time means that no previous instance of
